# leto

./: CMakeLists.txt  README.md  a.out  main.cpp  test.cpp  test1  test1.cpp
include/: converter.hpp  englishTable.hpp  russianTable.hpp  transformer.hpp  translate.hpp  translateTables.hpp
src/: converter.cpp  englishTables.cpp  englishTranslit.cpp  russianTable.cpp  russianTranslit.cpp  transformer.cpp  translate.cpp  translateTables.cpp
tests/: CMakeLists.txt  englishToRussian.cpp  tranlitTest.cpp
